add spark tunning