@@ -45,3 +45,18 @@ INFO BlockManagerMasterActor: Added rdd_0_1 in memory on mbk.local:50311 (size: 
 {% endhighlight %}
 上述信息意味着RDD 0的分片1消耗了717.5kb的内存。
 ####数据结构调优
+减少内存消耗的首要任务是避免java对象中添加基于指针的数据结构和封装对象，有如下几种方式避免：  
+1.使用对象数组和原生类型代替标准的java或scala集合类，fastutil类库为原生类型提供了和java标准库类似的集合类。  
+2.尽量避免带有很多小对象和指针的嵌套结构。  
+3.使用数值型ID或者枚举类来代替string作为主键。  
+4.如果机器内存少于32GB，添加-XX:+UseCompressedOops的JVM选项使指针由8字节改为4字节，可以将这些JVM选项配置在spark-env.sh。
+####序列化RDD存储
+当对象仍然很大，那么可以讲对象序列化后进行存储以减少内存使用，序列化后spark会将每个RDD分片作为一个很大的字节数组进行存储，这种方式唯一的缺点是访问这些序列化数据会变得很慢，因为必须反序列化每个对象。
+####垃圾回收器调优
+当java需要腾出空间给新的对象时，需要跟踪所有的java对象来找出没用的对象，由于垃圾回收器的代价是与java对象的数量成比例的，所以使用较少对象的数据结构（如使用ints数组代替LinkedList）会减少相应的代价。一个更好的方法是讲对象序列化，这时每个RDD分片就只有一个对象了（字节数组）。  
+#####衡量GC影响
+GC调优的第一步是收集GC发生的频率和每次GC消耗的时间等统计信息，这个工作可以通过添加-verbose:gc -XX:+PrintGCDetails -XX:PrintGCTimeStamps属性到SPARK_JAVA_OPTS环境变量中。这样当spark任务运行时，worker节点的日志就会显示GC每次发生的信息。
+#####缓存大小调优
+GC当中一个重要的配置参数是缓存RDD需要多少内存，默认，spark使用配置的spark.executor.memory值的60%的内存来缓存RDD，意味着40%的内存可用于任务执行时对象的创建。  
+当发现任务执行速度减慢并且发现GC频繁工作或者内存溢出，需要降低该百分比以减少内存消耗，比如需要降低为50%，则使用conf.set("spark.storage.memoryFraction","0.5")。结合序列化缓存，使用更小的缓存大小对减轻GC问题是很有作用的。
+#####高级GC调优
